# AllControlBase

./: TurtleBot1_完整部署指南.md  pyproject.toml  runtime_tuned_config_optimized.yaml  setup.py  test_chassis_manual.py
controller_ros/: BUG_ANALYSIS_REPORT.md  BUG_FIX_ANALYSIS.md  BUG_FIX_SUMMARY_v2.md  CMakeLists.txt  CONFIGURATION_GUIDELINES.md  OPTIMIZATION_NOTES.md  README.md  package.xml  setup.py
controller_ros/config/: CONFIG_REFERENCE.md  controller_params.yaml  turtlebot1.yaml  visualizer_params.yaml
controller_ros/launch/: controller.launch  trajectory_visualizer.launch  turtlebot1.launch  visualizer.launch  visualizer.launch.py
controller_ros/msg/: DiagnosticsV2.msg  LocalTrajectoryV4.msg
controller_ros/scripts/: CONFIG_COVERAGE.md  apply_enhanced_diagnostics.py  cmd_vel_adapter.py  (+18 more)
moshi/: day1.yaml  day2_chassis.yaml  final_optimized_config.yaml  runtime_tuned_config.yaml  增强诊断v2.0_问题修复报告.md  增强诊断使用指南.md  增强诊断集成完成报告.md  未诊断参数分析.md  配置优化建议.md
tuning_output/: analysis_summary.json  diagnostics_report.txt  tuned_turtlebot1.yaml
universal_controller/: BUG_ANALYSIS_REPORT.md  OPTIMIZATION_SUGGESTIONS.md  README.md  REFACTORING_NOTES.md  __init__.py  main.py  requirements.txt
universal_controller/msg/: CMakeLists.txt  DiagnosticsV2.msg  LocalTrajectoryV4.msg  UnifiedCmd.msg  __init__.py  package.xml
文档/: 01_技术文档.md  02_使用文档.md  03_项目结构.md  04_快速参考.md  05_对接文档.md  06_轨迹处理与底盘控制流程.md
需求/: 01_项目概述.md  02_系统架构.md  03_接口定义.md  04_功能需求.md  05_非功能需求.md  06_数据类型定义.md  07_状态估计器.md  08_一致性与健康监控.md  09_控制器实现.md  10_状态机与安全.md  11_配置参数.md  12_测试计划.md  13_可视化界面.md
(+235 files in other folders)
